--- a/uczniowie/templates/lista_ucz.html
+++ b/uczniowie/templates/lista_ucz.html
@@ -2,13 +2,15 @@
 {% block tytul %}KLASA++ - lista uczniow{% endblock %}
 {% block h1 %}KLASA++ - lista uczniow{% endblock %}
 {% block tresc %}
-  <h2>Lista uczniow</h2>
+  <h2>Lista Uczniow</h2>
   <ol>
-    {% for p in query %}
-        <li class="elemdel">{{ p.pytanie }}
-        <a href="{{ url_for('edytuj', pid=p.id) }}" class="btn btn-sm btn-primary">Edytuj</a>
-        <a href="{{ url_for('usun', pid=p.id) }}" class="btn btn-sm btn-danger">Usuń</a>
+    {% for u in query %}
+        <li class="elemdel">
+          <p>Imie: {{ u.imie }}</p>
+          <p>Nazwisko: {{u.nazwisko}}</p>
+          <p>Płeć: {{u.plec}}</p>
         </li>
+
     {% endfor %}
   </ol>
 
