--- a/uczniowie/templates/szablon.html
+++ b/uczniowie/templates/szablon.html
@@ -39,7 +39,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="{{ url_for('dodaj_kl') }}">Dodaj klase</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{{ url_for('dodaj_ucz') }}">Dodaj ucznia</a>
+            </li>
 
           </ul>
         </div>
