--- a/uczniowie/templates/lista_kl.html
+++ b/uczniowie/templates/lista_kl.html
@@ -9,6 +9,8 @@
           <p>Klasa: {{ k.klasa }}</p>
           <p>Rok matury: {{k.rok_matury}}</p>
           <p>Rok naboru: {{k.rok_naboru}}</p>
+          <a href="{{url_for('klasa_usun', kid=k.id)}}" class="btn btn-sm btn-danger">Usun</a>
+          <a href="{{url_for('klasa_edytuj', kid=k.id)}}" class="btn btn-sm btn-primary">Edytuj</a>
         </li>
 
     {% endfor %}
