--- a/uczniowie/templates/uczen_form.html
+++ b/uczniowie/templates/uczen_form.html
@@ -11,6 +11,9 @@
         {{ form.plec.label }}<br>
         {{ form.plec(class_="form-control") }}<br>
 
+        {{ form.klasa.label }}<br>
+        {{ form.klasa(class_="form-control") }}<br>
+
         <input type="submit" class="btn btn-default" value="Zapisz pytanie">
     </div>
 </form>
